--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,24 @@ authors = ["Dominic Burkart <@DominicBurkart>"]
 edition = "2018"
 description = "WIP"
 readme = "README.md"
-license = "MIT OR BSD-2-Clause OR GPL-2.0+"
+license = "MIT OR BSD-3-Clause OR GPL-2.0+"
 
 [lib]
 proc-macro = true
 
 [dependencies]
 syn = "1.0"
-quote = "1.0"
+quote = "1"
 serde = "1"
 futures = "0.3"
 proc-macro2 = "1.0"
+tar = "0.4"
+toml = "0.5"
+tempfile = "3.1"
+tokio = { version = "0.2",    features = ["full"] }
+reqwest = { version = "0.10", features = ["json", "brotli", "stream"] }
+cute = "0.3"
+rand = "0.7"
+async-trait = "0.1"
+url = "2"
+lazy_static = "1"
