--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = "MIT OR BSD-3-Clause OR GPL-2.0+"
 
 [dependencies]
-syn = "1.0"
+syn = {version = "1", features=["full"] }
 quote = "1"
 serde = "1"
 futures = "0.3"
