--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ syn = {version = "1", features=["full"] }
 quote = "1"
 serde = "1"
 futures = "0.3"
-proc-macro2 = "1.0"
+proc-macro2 = { version = "1.0", features = ["span-locations"]}
 tar = "0.4"
 toml = "0.5"
 tempfile = "3.1"
