--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ futures = "0.3"
 proc-macro2 = { version = "1.0", features = ["span-locations"]}
 tar = "0.4"
 toml = "0.5"
+cargo_toml = "0.8"
 tempfile = "3.1"
 tokio = { version = "0.2",    features = ["full"] }
 reqwest = { version = "0.10", features = ["json", "brotli", "stream"] }
