--- a/turbolift_macros/Cargo.toml
+++ b/turbolift_macros/Cargo.toml
@@ -13,5 +13,6 @@ proc-macro = true
 quote = "1"
 tar = "0.4"
 lazy_static = "1.4"
-proc-macro2 = "1.0"
+proc-macro2 = "1"
+fs_extra = "1"
 turbolift = { path=".." }
