--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,5 @@ readme = "README.md"
 license = "MIT OR BSD-3-Clause OR GPL-2.0+"
 
 [dependencies]
-syn = {version = "1", features=["full"] }
-quote = "1"
-serde = "1"
-futures = "0.3"
-proc-macro2 = { version = "1.0", features = ["span-locations"]}
-tar = "0.4"
-toml = "0.5"
-cargo-toml2 = "1"
-tempfile = "3.1"
-tokio = { version = "0.2",    features = ["full"] }
-reqwest = { version = "0.10", features = ["json", "brotli", "stream"] }
-cute = "0.3"
-rand = "0.7"
-async-trait = "0.1"
-url = "2"
-lazy_static = "1"
+turbolift_macros = { path="./turbolift_macros" }
+turbolift_internals = { path="./turbolift_internals" }
