--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Check
+      run: cargo check
     - name: Format
       run: cargo fmt
     - name: Clippy
