--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ license = "MIT OR BSD-3-Clause OR GPL-2.0+"
 [dependencies]
 turbolift_macros = { path="./turbolift_macros" }
 turbolift_internals = { path="./turbolift_internals" }
+async-std = { version="1.6" }
+chrono = "0.4"
+cached = "0.19"
