--- a/turbolift_macros/Cargo.toml
+++ b/turbolift_macros/Cargo.toml
@@ -17,6 +17,6 @@ proc-macro2 = "1"
 fs_extra = "1"
 brotli2 = "0.3.2"
 data-encoding = "2"
-cached = "0.19"
 rust-embed= { version="5", features=["debug-embed", "compression"]}
 turbolift_internals = { path="../turbolift_internals" }
+futures = "0.3"
