--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Check
-      run: cargo check
+      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo check
     - name: Format
-      run: cargo fmt
+      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo fmt
     - name: Clippy
-      run: cargo clippy -- -D warnings
+      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo clippy -- -D warnings
     - name: Local Queue
       run: cd examples/local_queue_example && RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo test
 
