--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,15 +19,17 @@ jobs:
     - name: Install latest nightly
       uses: actions-rs/toolchain@v1
       with:
+          profile: default
           toolchain: nightly
           override: true
-          components: rustfmt, clippy
-    - name: Check
-      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo check
+    - name: Rustup
+      run: rustup update
     - name: Format
       run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo fmt
+    - name: Check
+      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo check
     - name: Clippy
       run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo clippy -- -D warnings
     - name: Local Queue
-      run: cd examples/local_queue_example && RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo test --verbose
+      run: cd examples/local_queue_example && RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo test
 
