--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -29,3 +29,9 @@ anyhow = "1"
 cached = "0.19"
 async-std = "1.6"
 async-trait = "0.1"
+
+
+# kubernetes-specific requirements
+kube = "0.42.0"
+kube-runtime = "0.42.0"
+k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
