--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ turbolift_internals = { path="./turbolift_internals" }
 async-std = { version="1.6" }
 chrono = "0.4"
 cached = "0.19"
+actix-web = "3"
+serde_json = "1"
