--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,16 @@ description = "WIP"
 readme = "README.md"
 license = "Hippocratic-2.1"
 
+[features]
+distributed = ["chrono", "cached", "async-std"]
+service = ["actix-web", "serde_json"]
+# todo we can optimize reqs for children with this load
+
 [dependencies]
-turbolift_macros = { path="./turbolift_macros" }
-turbolift_internals = { path="./turbolift_internals" }
-async-std = { version="1.6" }
-chrono = "0.4"
-cached = "0.19"
-actix-web = "3"
-serde_json = "1"
+turbolift_macros = { path = "./turbolift_macros" }
+turbolift_internals = { path = "./turbolift_internals" }
+async-std = { version = "1.6", optional = true }
+chrono = { version = "0.4", optional = true }
+cached = { version = "0.19", optional = true }
+actix-web = { version = "3", optional = true }
+serde_json = { version = "1", optional = true }
