--- a/examples/local_queue_example/Cargo.toml
+++ b/examples/local_queue_example/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+"distributed" = ["turbolift/distributed"]
 
 [dependencies]
 rand = "0.7"
