--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,10 @@
             language: system
             types: [ rust ]
             pass_filenames: false
+        -   id: check
+            name: Check
+            description: Runs `cargo check` on the repository with distributed flag
+            entry: bash -c 'RUSTFLAGS='"'"'--cfg procmacro2_semver_exempt'"'"' cargo check --features "distributed" "$@"' --
+            language: system
+            types: [ rust ]
+            pass_filenames: false
