--- a/examples/local_queue_example/Dockerfile
+++ b/examples/local_queue_example/Dockerfile
@@ -3,3 +3,4 @@ FROM rustlang/rust:nightly
 COPY ./ ./
 WORKDIR examples/local_queue_example
 RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test
+RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test --features "distributed"
