--- a/examples/local_queue_example/Dockerfile
+++ b/examples/local_queue_example/Dockerfile
@@ -2,5 +2,11 @@
 FROM rustlang/rust:nightly
 COPY ./ ./
 WORKDIR examples/local_queue_example
+
+# test
 RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test
 RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test --features "distributed"
+
+# run
+RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run
+RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run --features "distributed"
