--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = "Hippocratic-2.1"
 
 [features]
-distributed = ["chrono", "cached", "async-std", "turbolift_macros/distributed"]
+distributed = ["chrono", "async-std", "turbolift_macros/distributed"]
 service = ["serde_json"]
 # todo we can optimize reqs for children with this load
 
@@ -17,6 +17,6 @@ turbolift_macros = { path = "./turbolift_macros" }
 turbolift_internals = { path = "./turbolift_internals" }
 async-std = { version = "1.6", optional = true }
 chrono = { version = "0.4", optional = true }
-cached = { version = "0.19", optional = true }
+cached = { version = "0.19" }
 actix-web = { version = "3" }
 serde_json = { version = "1", optional = true }
