--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ license = "Hippocratic-2.1"
 
 [features]
 distributed = ["chrono", "async-std", "turbolift_macros/distributed"]
-service = ["serde_json"]
 # todo we can optimize reqs for children with this load
 
 [dependencies]
@@ -19,4 +18,4 @@ async-std = { version = "1.6", optional = true }
 chrono = { version = "0.4", optional = true }
 cached = { version = "0.19" }
 actix-web = { version = "3" }
-serde_json = { version = "1", optional = true }
+serde_json = { version = "1" }
