use has_declared instead of memoizing the declaration of a function on a distribution platform

--- a/examples/local_queue_example/Dockerfile
+++ b/examples/local_queue_example/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR examples/local_queue_example
 
 # test
 RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test
-RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test --features "distributed"
+RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test --features distributed
 
 # run
 RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run
-RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run --features "distributed"
+RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run --features distributed
