--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,6 +31,6 @@ jobs:
     - name: Check without distributed feature
       run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo check
     - name: Check with distributed feature
-      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo check --features "distributed"
+      run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo check --features distributed
     - name: Clippy
       run: RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo clippy -- -D warnings
