use relative path for local import definitions instead of absolute path absolute paths don't make sense in VMs or on other filesystems whent the tar is moved & unpacked

--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -31,6 +31,7 @@ async-std = "1.6"
 async-trait = "0.1"
 get_if_addrs = "0.5.3"
 regex = "1"
+pathdiff = "0.2.0"
 
 # kubernetes-specific requirements
 kube = "0.42.0"
