don't hardcode dependency path while building

--- a/examples/local_queue_example/Dockerfile
+++ b/examples/local_queue_example/Dockerfile
@@ -1,7 +1,7 @@
 # run me in turbolift root! E.G.: "docker build -f examples/local_queue_example/Dockerfile ."
 FROM rustlang/rust:nightly
-COPY ./ ./
-WORKDIR examples/local_queue_example
+COPY ./ turbolift
+WORKDIR turbolift/examples/local_queue_example
 
 # test
 RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test
