--- a/examples/kubernetes_example/Cargo.toml
+++ b/examples/kubernetes_example/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 
 [dependencies]
 rand = "0.7"
-async-std = "1"
+tokio = {version="0.3", features=["full"]}
 lazy_static = "1"
 futures = "0.3"
 cute = "0.3"
