--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -19,6 +19,7 @@ tar = "0.4"
 toml = "0.5"
 cargo-toml2 = "1"
 tempfile = "3.1"
+reqwest = "0.10"
 tokio = { version = "0.2",    features = ["full"] }
 surf = "1.0.3"
 cute = "0.3"
@@ -27,7 +28,6 @@ url = "2"
 lazy_static = "1"
 anyhow = "1"
 cached = "0.19"
-async-std = "1.6"
 async-trait = "0.1"
 get_if_addrs = "0.5.3"
 regex = "1"
