--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,12 @@ readme = "README.md"
 license = "Hippocratic-2.1"
 
 [features]
-distributed = ["chrono", "async-std", "turbolift_macros/distributed"]
+distributed = ["chrono", "turbolift_macros/distributed"]
 # todo we can optimize reqs for children with this load
 
 [dependencies]
 turbolift_macros = { path = "./turbolift_macros" }
 turbolift_internals = { path = "./turbolift_internals" }
-async-std = { version = "1.6", optional = true }
 chrono = { version = "0.4", optional = true }
 actix-web = { version = "3" }
 serde_json = { version = "1" }
