--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -33,6 +33,6 @@ get_if_addrs = "0.5.3"
 regex = "1"
 
 # kubernetes-specific requirements
-kube = "0.42.0"
-kube-runtime = "0.42.0"
+kube = { repository = "https://github.com/DominicBurkart/kube-rs" }
+kube-runtime = { repository = "https://github.com/DominicBurkart/kube-rs" }
 k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
