refactor CI and testing schema

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,8 +1,8 @@
-name: rust
+name: linting
 
 on:
   push:
-    branches: [ master ]
+    branches: master
   pull_request:
     branches: [ master ]
 
