--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ chrono = { version = "0.4", optional = true }
 actix-web = { version = "3" }
 serde_json = { version = "1" }
 tokio-compat-02 = { version = "0.1" }
+tracing = {version="0.1", features=["attributes"]}
+tracing-futures = "0.2.4"
