--- a/turbolift_macros/Cargo.toml
+++ b/turbolift_macros/Cargo.toml
@@ -19,3 +19,5 @@ fs_extra = "1"
 turbolift_internals = { path="../turbolift_internals" }
 futures = "0.3"
 cached = "0.19"
+tracing = {version="0.1", features=["attributes"]}
+tracing-futures = "0.2.4"
