--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -7,20 +7,20 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = {version = "1", features=["full"] }
+syn = { version = "1", features=["full"] }
 quote = "1"
 serde = "1"
 serde_json = "1"
 brotli2 = "0.3.2"
 data-encoding = "2"
 futures = "0.3"
-proc-macro2 = { version = "1.0", features = ["span-locations"]}
+proc-macro2 = { version = "1", features = ["span-locations"]}
 tar = "0.4"
 toml = "0.5"
 cargo-toml2 = "1"
 tempfile = "3.1"
-reqwest = {repository="https://github.com/DominicBurkart/reqwest"}
-tokio = { version = "0.3", features = ["full"] }
+reqwest = "0.11"
+tokio = { version = "1", features = ["full"] }
 tokio-compat-02 = "0.1"
 cute = "0.3"
 rand = "0.7"
@@ -35,6 +35,6 @@ tracing = {version="0.1", features=["attributes"]}
 tracing-futures = "0.2.4"
 
 # kubernetes-specific requirements
-kube = "0.43.0"
-kube-runtime = "0.43.0"
-k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
+kube = "0.51.0"
+kube-runtime = "0.51.0"
+k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
