--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           path: './turbolift'
       - uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: "v0.11.0"
       - name: install rustup and rust nightly
         run: |
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2020-09-28
