--- a/turbolift_macros/Cargo.toml
+++ b/turbolift_macros/Cargo.toml
@@ -21,3 +21,4 @@ futures = "0.3"
 cached = "0.19"
 tracing = {version="0.1", features=["attributes"]}
 tracing-futures = "0.2.4"
+syn = { version = "1", features=["full"] }
