setup ingress in ci

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -57,6 +57,7 @@ jobs:
       - name: run tests
         run: |
           cd turbolift/examples/kubernetes_example
+          sh setup_ingress.sh
           RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo test --features distributed -- --nocapture
 
   kubernetes_example_distributed_run:
@@ -74,4 +75,5 @@ jobs:
       - name: run tests
         run: |
           cd turbolift/examples/kubernetes_example
+          sh setup_ingress.sh
           RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo run --features distributed
