fix nightly version in local queue test

--- a/examples/local_queue_example/Dockerfile
+++ b/examples/local_queue_example/Dockerfile
@@ -1,12 +1,14 @@
 # run me in turbolift root! E.G.: "docker build -f examples/local_queue_example/Dockerfile ."
 FROM rustlang/rust:nightly
+RUN rustup default nightly-2020-09-28
+ENV RUSTFLAGS='--cfg procmacro2_semver_exempt'
 COPY ./ turbolift
 WORKDIR turbolift/examples/local_queue_example
 
 # test
-RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test -- --nocapture
-RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly test --features distributed -- --nocapture
+RUN cargo +nightly test -- --nocapture
+RUN cargo +nightly test --features distributed -- --nocapture
 
 # run
-RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run
-RUN RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo +nightly run --features distributed
+RUN cargo +nightly run
+RUN cargo +nightly run --features distributed
