--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.1"
 authors = ["Dominic Burkart <@DominicBurkart>"]
 edition = "2018"
 description = "Easy distribution interface"
+keywords = ["distribution", "distributed", "kubernetes", "K8s"]
+categories = ["build-utils", "development-tools", "concurrency", "network-programming", "asynchronous"]
 readme = "README.md"
 homepage = "https://dominic.computer/turbolift"
 license = "Hippocratic-2.1"
