--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ distributed = ["chrono", "turbolift_macros/distributed"]
 # todo we can optimize reqs for children with this load
 
 [dependencies]
-turbolift_macros = { path = "./turbolift_macros" }
-turbolift_internals = { path = "./turbolift_internals" }
+turbolift_macros = { path = "./turbolift_macros", version="0.1.1" }
+turbolift_internals = { path = "./turbolift_internals", version="0.1.1" }
 chrono = { version = "0.4", optional = true }
 actix-web = { version = "3" }
 serde_json = { version = "1" }
