--- a/turbolift_macros/Cargo.toml
+++ b/turbolift_macros/Cargo.toml
@@ -16,7 +16,7 @@ proc-macro = true
 quote = "1"
 proc-macro2 = "1"
 fs_extra = "1"
-turbolift_internals = { path="../turbolift_internals" }
+turbolift_internals = { path="../turbolift_internals", version="0.1.1"}
 futures = "0.3"
 cached = "0.19"
 tracing = {version="0.1", features=["attributes"]}
