add metadata and patches to all projects

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,13 @@ serde_json = { version = "1" }
 tokio-compat-02 = { version = "0.1" }
 tracing = {version="0.1", features=["attributes"]}
 tracing-futures = "0.2.4"
+
+[package.metadata.playground]
+features = ["span-locations"]
+
+[package.metadata.docs.rs]
+ rustc-args = ["--cfg", "procmacro2_semver_exempt"]
+ rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]
+
+[patch.crates-io]
+turbolift = { path = "." }
