--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -40,3 +40,13 @@ derivative = "2.2.0"
 kube = "0.51.0"
 kube-runtime = "0.51.0"
 k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
+
+[package.metadata.playground]
+features = ["span-locations"]
+
+[package.metadata.docs.rs]
+ rustc-args = ["--cfg", "procmacro2_semver_exempt"]
+ rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]
+
+[patch.crates-io]
+turbolift_internals = { path = "." }
