update build utils slug

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Dominic Burkart <@DominicBurkart>"]
 edition = "2018"
 description = "Easy distribution interface"
 keywords = ["distribution", "distributed", "kubernetes", "K8s"]
-categories = ["build-utils", "development-tools", "concurrency", "network-programming", "asynchronous"]
+categories = ["development-tools::build-utils", "development-tools", "concurrency", "network-programming", "asynchronous"]
 readme = "README.md"
 homepage = "https://dominic.computer/turbolift"
 license = "Hippocratic-2.1"
