add emoji to project description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "turbolift"
 version = "0.1.1"
 authors = ["Dominic Burkart <@DominicBurkart>"]
 edition = "2018"
-description = "Easy distribution interface"
+description = "Easy distribution interface 🚡"
 keywords = ["distribution", "distributed", "kubernetes", "K8s"]
 categories = ["development-tools::build-utils", "development-tools", "concurrency", "network-programming", "asynchronous"]
 readme = "README.md"
