avoid fs read in get_sanitized_file

--- a/turbolift_internals/Cargo.toml
+++ b/turbolift_internals/Cargo.toml
@@ -39,6 +39,8 @@ tracing = {version="0.1", features=["attributes"]}
 tracing-futures = "0.2.4"
 uuid = { version="0.8", features=["v4"] }
 derivative = "2.2.0"
+pathdiff = "0.2.0"
+include_dir = "0.6.1"
 
 # kubernetes-specific requirements
 kube = "0.51.0"
