add scheduled job to rerun examples

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -1,10 +1,14 @@
 name: examples
 
+
+
 on:
   push:
     branches: main
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron:  '45 8 * * *'
 
 jobs:
   local_queue_example:
