--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -81,3 +81,21 @@ jobs:
           cd turbolift/examples/kubernetes_example
           sh setup_cluster.sh
           RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo run --features distributed
+
+  kubernetes_example_multiple_distributed_run:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: './turbolift'
+      - name: install rustup and rust nightly
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2020-09-28
+      - uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: "v0.11.0"
+      - name: run tests
+        run: |
+          cd turbolift/examples/kubernetes_example_multiple_distributed
+          sh setup_cluster.sh
+          RUSTFLAGS='--cfg procmacro2_semver_exempt' cargo run --features distributed
